--- a/index.html
+++ b/index.html
@@ -7,8 +7,80 @@
     </head>
 
     <body>
+      <div class="logo">
+      <img src="https://i.postimg.cc/dtt8pRdQ/image.png" alt="">
+      
 
-메인페이지 New Sum
+      <section>
+        <form action="https://search.naver.com/search.naver">
+            <div class="search">
+                <input type="text" name="query" value="">
+                <button type="submit">검색</button>
+            </div>
+        </form>
+    </section>
+
+
+      </div>
+
+<style>
+
+  .logo{
+    border: 0;
+    width: 200px;
+    height: 250px;
+  }
+
+
+
+img{
+  width: 250px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  padding: 10px;
+  
+  
+}
+
+
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.search {
+  width: 300px;
+  height: 100px;
+}
+.search input {
+  width: 80%;
+  height: 30px;
+  font-size: 18px;
+  border: none;
+  border-bottom: 1px black solid;
+}
+
+.search button {
+  font-size: 20px;
+  border: none;
+  background-color: palevioletred;
+  width: 50px;
+  height: 40px;
+  border-radius: 35px;
+  color: #fff;
+  cursor: pointer;
+}
+
 
     </body>
   </html>
